--- a/src/pages/protected/pitch-deck/index.astro
+++ b/src/pages/protected/pitch-deck/index.astro
@@ -35,7 +35,7 @@ import "../../../styles/pitch.css"
     });
 </script>
 
-<PitchLayout title="Pitch Deck TCN Title" description="Pitch Deck TCN Description" keywords="Pitch Deck TCN Keywords">
+<PitchLayout title="The Clean Network: Steady Growth, Efficient Operations" keywords="Pitch Deck TCN Keywords">
 
     <!-- <header>
         <div class="ctnr">
@@ -54,7 +54,7 @@ import "../../../styles/pitch.css"
 
                 <h1 class="reveal">The Clean Network<sup>©</sup></h1>
 
-                <h2 class="reveal_delay1">Subheading goes here</h2>
+                <h2 class="reveal_delay1">Steady growth, efficient operations</h2>
                 <!-- <p class="url">cleannetwork.co.uk</p> -->
             </div>
         </section>
