--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,6 +8,8 @@ import Footer from "../components/Footer.astro";
 import "../styles/subpages.css";
 
 import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS } from "../consts";
+
+import CookieConsentBanner from "../components/CookieConsentBanner.astro";
 ---
 
 <!DOCTYPE html>
@@ -22,5 +24,7 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS } from "../consts";
         <Header />
         <slot />
         <Footer />
+
+        <CookieConsentBanner></CookieConsentBanner>
     </body>
 </html>
