--- a/src/layouts/PitchLayout.astro
+++ b/src/layouts/PitchLayout.astro
@@ -5,6 +5,8 @@ import BaseHead from "../components/BaseHead.astro";
 import Footer from "../components/Footer.astro";
 
 import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS } from "../consts";
+
+import CookieConsentBanner from "../components/CookieConsentBanner.astro";
 ---
 
 <!DOCTYPE html>
@@ -23,5 +25,6 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS } from "../consts";
         </main>
 
         <Footer />
+        <CookieConsentBanner></CookieConsentBanner>
     </body>
 </html>
