--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,6 +5,8 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 
+import OQVABadge from "../components/OQVABadge.astro";
+
 import "../styles/subpages.css";
 
 import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS } from "../consts";
@@ -26,5 +28,6 @@ import CookieConsentBanner from "../components/CookieConsentBanner.astro";
         <Footer />
 
         <CookieConsentBanner></CookieConsentBanner>
+        <OQVABadge></OQVABadge>
     </body>
 </html>
