--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -22,6 +22,7 @@ import Header from "../../components/Header.astro";
 import BaseHead from "../../components/BaseHead.astro";
 import Footer from "../../components/Footer.astro";
 import ContactSection from "../../components/ContactSection.astro"
+import OQVABadge from "../../components/OQVABadge.astro";
 
 import "../../styles/subpages.css"
 import "../../styles/collections.css"
@@ -139,6 +140,8 @@ import { SITE_KEYWORDS, SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS,
         <ContactSection />
 
         <Footer />
+
+        <OQVABadge></OQVABadge>
 
         <Schema
             item={{
