--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import { getCollection } from "astro:content";
 // const sectors = await getCollection("sectors");
 const testimonials = await getCollection("testimonials");
 
-import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS, SITE_H1, INTRO_H2, TEXT_BLOCK, SERVICES_SECTION_DESCRIPTION, SECTORS_SECTION_DESCRIPTION, LOCATIONS_SECTION_DESCRIPTION, FULL_ADDRESS, LONDON_PHONE_NO, LONDON_PHONE_NO_HREF } from "../consts";
+import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS, SITE_H1, INTRO_H2, TEXT_BLOCK, SERVICES_SECTION_DESCRIPTION, SECTORS_SECTION_DESCRIPTION, LOCATIONS_SECTION_DESCRIPTION, FULL_ADDRESS, TEL, TEL_HREF } from "../consts";
 
 const benefits = (await getCollection('benefits')).sort((a, b) => {
     // Check if both items have an 'order' property
@@ -52,7 +52,7 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 						</div>
 					
 						<div class="flex column">
-							<a href={`tel:${LONDON_PHONE_NO_HREF}`} aria-label="Call us"><span>London:</span> {LONDON_PHONE_NO}</a>
+							<a href={`tel:${TEL_HREF}`} aria-label="Call us"><span>London:</span> {TEL}</a>
 					
 							<!-- <a href="tel:+44-0121-3927529"><span>Birmingham:</span> 0121 3927529</a> -->
 						</div>
