--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -23,6 +23,7 @@
 		text-align: center;
 		font-size: clamp(2rem,8vw,4.5rem);
 		color:var(--primary-a);
+        width: auto;
 	}
 
     form .title + p {
