Initial Quick Optimization Tasks - 08/09

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -629,6 +629,7 @@ import { TEL, TEL_HREF } from "../consts";
             visibility: hidden;
             border: 0.1rem solid var(--light-a);
             align-items: stretch;
+            font-size: 0.85em;
         }
 
         .subsets > hr {
