--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,8 +18,8 @@ import CookieConsentBanner from "../components/CookieConsentBanner.astro";
 <html lang="en">
     <head>
         <BaseHead
-        title={title ? title : SITE_TITLE}
-        description={description ? description : SITE_DESCRIPTION}
+        title={metaTitle ? metaTitle : SITE_TITLE}
+        description={metaDescription ? metaDescription : SITE_DESCRIPTION}
         keywords={keywords ? keywords : SITE_KEYWORDS} />
     </head>
     <body>
