--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -239,7 +239,7 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 				
 				<p>We also understand that no two clients are the same, <b>we tailor our office cleaning contracts accordingly.</b></p>
 				
-				<p>Whether it’s a <b>large office</b> in London which requires a large cleaning contract with many hours daily or a <b>smaller office</b> in South West London which only needs attention for a few hours a week, <b>we create and deliver a cost-effective contract to suit you and your team.</b></p>
+				<p>Whether it’s a <b>large office</b> in the heart of the City of London which requires a sizeable cleaning contract with many hours daily or a <b>smaller startup office</b> in <strong>Shoreditch</strong> which only needs attention for a few hours a week, <b>we create and deliver a cost-effective contract to suit you and your team.</b></p>
 				
 				<a href="#contact" class="main cta" aria-label="Get a free quote">Get a Free Quote</a>
 			</section>
