--- a/src/styles/subpages.css
+++ b/src/styles/subpages.css
@@ -86,7 +86,7 @@ h2::after {
     width: clamp(2.5rem, 7vmin, 3.5rem);
     background-color: var(--light);
     border-radius: 40rem;
-    margin-left: auto;
+    margin-left: 1rem;
     box-sizing: border-box;
     border: 0.2rem solid var(--light-a);
     display: inline-flex;
