--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -327,9 +327,9 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 						"telephone": "+4402034110275",
 						"address" :{
 							"@type": "PostalAddress",
-							"streetAddress": "6-8 Knights Court",
+							"streetAddress": "6-8 Bonhill Street",
 							"addressLocality": "London",
-							"postalCode": "EC1M 4NH",
+							"postalCode": "EC2A 4BX",
 							"addressCountry": "UK"
 							}
 						},
