--- a/src/pages/jobs/index.astro
+++ b/src/pages/jobs/index.astro
@@ -76,9 +76,9 @@ import { JOBS_TITLE, JOBS_DESCRIPTION, JOBS_KEYWORDS, JOBS_H1, JOBS_TEXT_BODY } 
                 "@type": "Place",
                 "address": {
                     "@type": "PostalAddress",
-                    "streetAddress": "6-8 Knights Court",
+                    "streetAddress": "6-8 Bonhill Street",
                     "addressLocality": "London",
-                    "postalCode": "EC1M 4NH",
+                    "postalCode": "EC2A 4BX",
                     "addressCountry": "UK"
                 }
             }
