--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -35,9 +35,9 @@ import OQVABadge from "../components/OQVABadge.astro";
 				],
 				"address": {
 					"@type": "PostalAddress",
-					"streetAddress": "6-8 Knights Court",
+					"streetAddress": "6-8 Bonhill Street",
 					"addressLocality": "London",
-					"postalCode": "EC1M 4NH",
+					"postalCode": "EC2A 4BX",
 					"addressCountry": "UK"
 				}  
 			}}
