--- a/src/pages/sectors/index.astro
+++ b/src/pages/sectors/index.astro
@@ -92,8 +92,8 @@ import { SITE_KEYWORDS, SECTORS_TITLE, SECTORS_DESCRIPTION, SECTORS_KEYWORDS, SE
             ],
             "address": {
                 "@type": "PostalAddress",
-                "streetAddress": "6-8 Knights Court",
-                "postalCode": "EC1M 4NH",
+                "streetAddress": "6-8 Bonhill Street",
+                "postalCode": "EC2A 4BX",
                 "addressLocality": "London",
                 "addressRegion": "GB",
                 "addressCountry": "UK"
