--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -156,8 +156,8 @@ import { SITE_KEYWORDS, SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS,
                 ],
                 "address": {
 					"@type": "PostalAddress",
-					"streetAddress": "6-8 Knights Court",
-                    "postalCode": "EC1M 4NH",
+					"streetAddress": "6-8 Bonhill Street",
+                    "postalCode": "EC2A 4BX",
 					"addressLocality": "London",
 					"addressRegion": "GB",
 					"addressCountry": "UK"
